# harmony

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  justfile  lefthook.yml
harmony-api/: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  deny.toml  fly.toml  lefthook.yml  openapi.json
harmony-api/.sqlx/: query-010a5d0ebc8a2f1a780ff228de953fb392932bdf0f06b206d74b925e38191c96.json  query-01a80550cc0e1ab89dfc72f38915db09f21a36cdd1ad88eae69d28d731e1d0f8.json  query-01e660ecbc47f15dc5b29ed06f2eca7059c0e35bdf22794cdd8c45bf783c656c.json  query-0206da1e3e6c1b831c1ff8647cf5edafdd2d338b4529980d4fc1231f02e5e276.json  query-0379efb0c1edc5d2f783e6cd0dea81a5f432e97445754a4fd633bdf6ed0b8004.json  query-04e80e19490329214327964a6f595466cacb6acfeb3dde75276d5d97c9ea9563.json  query-059a012a72d311f834179bf4507e43faa78d74a1e0303f32e4d831ed781bbd2b.json  query-06c59c39ac67a4229106dd063bba265fd10c1a19cbfc92a57b49ed6f35bd1062.json  query-06ef24ccae485382e24e6ec3b77fe725f9bf6775d396f7d9f423b688742cf05f.json  query-083f19a87cc38ed91e817c6baa47e4698ba596a97be2b2ac9a89c3ad0307df08.json  query-092d3fc1ba0e1e828a5faa8ebe5e1b453aafd9ca91623d188211439d4e7b5ace.json  query-09437e2819262c7e66eb0f9a4f61ec1afb41b262b6e3a9564b5ab03a3911cee2.json  query-0a6bbb741c994600edee62a79347d9630bf655ec118384eaed248b765a2a5e10.json  query-0a7dbb2514e58fc999d21b6f525ec1f59f36cb8db516cdbc250a35db0566ca6a.json  query-0abec1f0ca9bd9f5627275b007850b3b88577be8463e46f8e63c198cc80d2c68.json  query-0b419cc104a242aeb969c73bf2cb154252b367ad614066505b386978a4295e80.json  query-0bbe472d66a7dfee776a733dad227256145b1c94cfc24ff9cced104a1421dc8b.json  query-0bee598bb0b59f3255dba49cc5753673a9190be3892e6c2c090bb54e8a6e7754.json  query-0cd9745e8986a74686fcc62e6f0ee37d2663f3f39f918e62bbdef6b051f9e212.json  query-0ec380f9a1410aa7f11e7c237a6e1999142fd402cd3852dc40aded2cac6f9eab.json  query-0ee6a18715d43e99cafad9071e3fd257ccb1e275069e72ef5a53441ed73eb7a8.json  query-0f564b7dc7ca5453349c9b32bb09fa3bf26108bfe00a64d42d9a41a7cca4c695.json  query-0f5f3de9a9b7b95c361f79b9f7f2cfd16a77edd217be613edc67ebe25e55d09e.json  query-0f7bccdfa81ae3b9099c26fa49f2dfeadddf59abbed8b69ffde3ede1ff1b2090.json  query-1095ce94646a69aa915a0c6764ad10bb8ef5323cb41ffc43d45d37adfbe8514b.json  query-13c9b51f8e8048434096fecb285fe64ec6055e175d2f0ddcde81995911c1e8aa.json  query-1585a9358497cd51442f324c7f801229b45fe21faf39bbb22ffd1f012fc18722.json  query-15990db289a8ee41f8da78c688609fe82fa82d92706f78b6329f2995cd512b1e.json  query-15a4807a419412fba9fe5d515b10156709ee010831e474158bfde86c9f0b1af1.json  query-17f32a4e8f70bcb12a9557aa5cc063e63d1950bf4998f039ce4c0366b06a2b50.json  query-18b9b8cf74e082efc76d530866075e2d3fdd466ba82ebaf2b6fc7a62c0cca4d8.json  query-1a4ff0e17968046c580582d15636f47de3be5ea3da5895d3b79c63c00b3f6a1a.json  query-1a6eaa24e60dfbe1a4d525192c7060713450c644ef2c7da46f4ef4468687cf3a.json  query-1c61e6bffd3cc627221cd1f6fa619496aca68546504979e0fa39b4c6bc26e55a.json  query-1d84cc699f06b2abf2c05a6532344cfe29c57d83608aad636561a1e039bf2ae4.json  query-1e2b4d82162b20f5856eec6ff3df65673fd5f01245fe1de2862d4a1afc578529.json  query-21d3670740f2c24832d2f2ab18b23cdc653191e12aa843db0631193c76c2261f.json  query-2229ace3d2d22c6a1e80e258b509f2215de4d8392775c7f005b240e4e46e5a9f.json  query-22858810dee75c97360669f533fb24ad0c7ff34227eb2878d2daabb337b23e85.json  query-23269a7e204dc8dc95de37c96f039e4228891ab8cb0ed24c83f43e35a9ca1c1f.json  (+310 more)
harmony-api/scripts/: export_nsfw_onnx.py
harmony-api/src/: config.rs  lib.rs  main.rs
harmony-api/src/api/: attachment_scan.rs  client_ip.rs  emoji_image_scan.rs  errors.rs  extractors.rs  founder.rs  identity_image_scan.rs  image_scan.rs  link_unfurl.rs  mod.rs  openapi.rs  router.rs  session.rs  state.rs
harmony-api/src/api/dto/: admin.rs  analytics.rs  badges.rs  bans.rs  channels.rs  desktop_auth.rs  discovery.rs  dms.rs  friends.rs  gifs.rs  invites.rs  keys.rs  members.rs  messages.rs  migration.rs  mod.rs  moderation.rs  moderation_settings.rs  notification_settings.rs  pagination.rs  profiles.rs  read_states.rs  serde_helpers.rs  server_emojis.rs  servers.rs  user_preferences.rs  voice.rs
harmony-api/src/api/handlers/: admin.rs  analytics.rs  badges.rs  bans.rs  channels.rs  desktop_auth.rs  discovery.rs  dms.rs  events.rs  friends.rs  gifs.rs  invites.rs  keys.rs  members.rs  messages.rs  migration.rs  mod.rs  (+12 more)
harmony-api/src/domain/: errors.rs  mod.rs
harmony-api/src/infra/: broadcast_event_bus.rs  klipy.rs  link_unfurl.rs  mod.rs  noop_csam_matcher.rs  noop_image_classifier.rs  noop_storage_object_remover.rs  onnx_nsfw_classifier.rs  openai_moderator.rs  pg_notify_event_bus.rs  pg_presence_tracker.rs  plan_always_allowed.rs  presence_tracker.rs  safe_browsing.rs  supabase_admin.rs
harmony-api/tests/: analytics_emission_test.rs  api_convention_test.rs  architecture_test.rs  attachment_moderation_test.rs  attachments_test.rs  ban_evasion_test.rs  banner_paywall_test.rs  channel_role_access_test.rs  desktop_auth_flow_test.rs  desktop_auth_test.rs  dm_concurrency_test.rs  emoji_image_moderation_test.rs  founder_admin_test.rs  founding_badge_test.rs  friendship_test.rs  identity_image_moderation_test.rs  invite_preview_rate_limit_test.rs  invite_preview_test.rs  klipy_gif_test.rs  link_unfurl_test.rs  mentions_polish_test.rs  mentions_test.rs  migration_dashboard_test.rs  moderation_dashboard_test.rs  notification_preferences_test.rs  official_badge_endpoint_test.rs  official_badge_test.rs  onnx_nsfw_classifier_test.rs  openapi_enforcement_test.rs  permission_matrix_test.rs  pins_test.rs  private_channel_access_matrix_test.rs  profile_bio_banner_test.rs  profile_endpoint_test.rs  reactions_test.rs  read_state_access_test.rs  rfc9457_contract_test.rs  rust_patterns_test.rs  search_test.rs  server_discovery_test.rs  (+6 more)
harmony-app/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  deny.toml  tauri.conf.json
harmony-app/src-tauri/capabilities/: default.json
harmony-app/src-tauri/icons/: icon.icns
harmony-app/src-tauri/src/: lib.rs  main.rs
(+966 files in other folders)
