[package]
name = "harmony-app"
version = "0.1.0"
description = "Harmony — open-source, privacy-first group communication"
authors = ["Harmony Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/harmony-app/harmony"
homepage = "https://harmony.app"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harmony_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

