[package]
name = "harmony-app"
version = "0.1.0"
description = "Harmony — open-source, privacy-first group communication"
authors = ["Harmony Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/harmony-app/harmony"
homepage = "https://harmony.app"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harmony_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-keyring = "0.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vodozemac = "0.9"
rusqlite = { version = "0.39", features = ["bundled-sqlcipher"] }
tokio = { version = "1", features = ["sync"] }
base64 = "0.22"
rand = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
getrandom = "0.3"
sha2 = "0.10"
tracing = "0.1"
sentry = "0.42"
tauri-plugin-sentry = "0.5"

[dev-dependencies]
tempfile = "3"

