[package]
name = "harmony-app"
version = "0.8.4"
description = "Harmony — open-source, privacy-first group communication"
authors = ["Harmony Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/zcharef/harmony"
homepage = "https://joinharmony.app"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harmony_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# WHY tray-icon: system tray with Show/Hide + Quit (close-to-tray).
# WHY image-png: setOverlayIcon (Windows unread badge) and defaultWindowIcon
# (tray icon) decode PNG bytes on the Rust side.
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-keyring = "0.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vodozemac = "0.9"
rusqlite = { version = "0.39", features = ["bundled-sqlcipher"] }
tokio = { version = "1", features = ["sync"] }
base64 = "0.22"
rand = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
getrandom = "0.3"
sha2 = "0.10"
tracing = "0.1"
sentry = "0.42"
tauri-plugin-sentry = "0.5"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-notification = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"

[dev-dependencies]
tempfile = "3"

